--- a/deploy/base/kustomization.yaml
+++ b/deploy/base/kustomization.yaml
@@ -10,6 +10,7 @@ bases:
   - sso
   - source/http
   - source/mqtt
+  - source/command
   - service/influxdb
   - service/grafana
   - service/console
