--- a/deploy/base/source/command/kustomization.yaml
+++ b/deploy/base/source/command/kustomization.yaml
@@ -2,6 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - broker.yaml
-  - kafka-channel.yaml
-  - kafka-command-channel.yaml
+  - service.yaml
+  - sink-binding.yaml
