--- a/http-endpoint/Cargo.toml
+++ b/http-endpoint/Cargo.toml
@@ -10,10 +10,13 @@ license = "Apache-2.0"
 anyhow = "1"
 snafu = "0.6"
 
+actix = "0.10"
+actix-broker = "0.3.1"
 actix-rt = "1.1"
 actix-service = "1"
-actix-web = "3"
+actix-web = "3.3.2"
 actix-web-httpauth = "0.5.0"
+actix-web-actors = "3"
 
 futures = "0.3"
 futures-core = "0.3"
