Implement command router based on tokio

--- a/endpoint-common/Cargo.toml
+++ b/endpoint-common/Cargo.toml
@@ -44,3 +44,5 @@ drogue-cloud-service-api = { path = "../service-api" }
 drogue-cloud-service-common = { path = "../service-common" }
 
 x509-parser = "0.9"
+
+tokio = { version = "1", features = ["full"] }
